# ethereum-rpc-c

./: CMakeLists.txt
inc/: ethrpc.h  json.h  jsonrpc_client.h  jsonrpc_request.h  jsonrpc_response.h
src/: ethrpc.c  json.c  jsonrpc_client.c  jsonrpc_request.c  jsonrpc_response.c  main.c
tests/: main.c  test_json.c  test_json.h
