cmake_minimum_required(VERSION 3.13)
project(ethereum-rpc-c)
set(C_STANDARD C99)
set(CMAKE_BUILD_TYPE Debug)
add_library(ethrpc src/ethrpc.c src/jsonrpc_client.c src/jsonrpc_request.c src/jsonrpc_response.c src/json.c)
target_include_directories(ethrpc PUBLIC inc)
target_link_libraries(ethrpc PUBLIC curl)
add_executable(ethrpc-test tests/main.c tests/test_json.c)
target_include_directories(ethrpc-test PUBLIC inc tests)
target_link_libraries(ethrpc-test PUBLIC ethrpc)

